Dark mode bug fix, styling bug on small screens

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,10 @@ html, body {
         width: 10%;
     }
     .profile-header{
-        grid-template-columns: 20% 80% !important;    
+        grid-template-columns: 20% 80% !important;  
+        grid-template-rows: 20% 10% 20% 30% 15%;
+        /* grid-template-rows: auto !important; */
+        font-size: 2.0vh !important;
     }
     .profile-image-container{
         grid-row: 1 / span 1 !important;
@@ -76,9 +79,14 @@ html, body {
     .profile-image{
         height: 100% !important;
     }
+    .profile-name-container{
+        padding-left: 20px !important;
+    }
     .profile-description{
         grid-column: 1 / span 2 !important;
-        /* grid-row: 2 !important; */
+        grid-row: 2 / span 1 !important;
+        background: transparent !important;
+        z-index: 0 !important;
     }
     .profile-stats{
         grid-row: 5 !important;
@@ -92,6 +100,10 @@ html, body {
         grid-row: 3 / span 2 !important;
         align-items: flex-end;
     }
+    .profile-description, .profile-links {
+        width: 100%;
+      }
+    
     .links-entry{
         font-size: 1.5vh !important;
     }
@@ -520,6 +532,7 @@ body.dark-mode {
     width: 100%;
     font-size: 2.5vh;
 }
+
 .profile-image-container{
     display: flex;
     height: 100%;
